# hikaru

./: Cargo.toml  rss.xml  tasks.hconf  tasks.tconf  title_parser.sh
src/: filters.rs  main.rs
src/actions/: download.rs  exec.rs  mod.rs
src/clients/: mod.rs  qbittorrent.rs
src/feeds/: feed_model.rs  mod.rs
src/hconf_parser/: model.rs
src/task/: mod.rs  task.rs  task_pipeline.rs  task_schedule.rs
