[package]
name = "hikaru"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
hcl-rs = "0.19.2"
log = "0.4.27"
quick-xml = { version = "0.38.1", features = ["tokio", "serde", "async-tokio", "serde-types", "serialize"] }
reqwest = { version = "0.12.22", features = ["cookies"] }
serde = { version = "1.0.219", features = ["derive"] }
simple_logger = "5.0.0"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }
wildcard = "0.3.0"
